[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "swarms-fork"
version = "0.1.0"
description = "A fork of kyegomez/swarms — scalable multi-agent orchestration framework"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "swarms-fork contributors" }
]
keywords = ["ai", "agents", "swarms", "llm", "multi-agent", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "loguru>=0.7.0",
    "pydantic>=2.7.0",
    "tenacity>=8.3.0",
    "tiktoken>=0.7.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
vector = [
    "chromadb>=0.5.0",
    "faiss-cpu>=1.8.0",
]
tools = [
    "duckduckgo-search>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.32.0",
]
all = [
    "swarms-fork[dev,vector,tools]",
]

[project.urls]
Homepage = "https://github.com/your-org/swarms"
Repository = "https://github.com/your-org/swarms"
Issues = "https://github.com/your-org/swarms/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["swarms*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# removed --cov flags so a plain `pytest` run doesn't require pytest-cov installed
# -p no:warnings keeps output clean while I'm just poking around locally
addopts = "-v -p no:warnings"
